--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ base {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.repsy.io/mvn/jiraiyah/jilogger' }
 }
 
 dependencies {
@@ -19,7 +20,9 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"	
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modImplementation include("jiraiyah.logger:jilogger:${jilogger_version}")
 }
 
 processResources {
