--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,6 @@ loader_version=0.16.9
 fabric_version=0.109.0+1.21.3
 
 # Dependencies
-mod_version=1.0.0
 jilogger_version=1.0.0
+# MOD VERSION
+mod_version=1.1.0
